--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<rest-assured.version>5.4.0</rest-assured.version>
-		<maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
+<!--		<maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,7 +69,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>${maven-checkstyle-plugin.version}</version>
+				<version>3.3.1</version>
+<!--				<version>${maven-checkstyle-plugin.version}</version>-->
 				<executions>
 					<execution>
 						<id>validate</id>
